--- a/index.html
+++ b/index.html
@@ -6,10 +6,43 @@
  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
  <title>Dimitris Nimas - Social</title>
+
+ <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .wrapper {
+            position: relative;
+            padding-top: 56.2225%; /* Aspect ratio 16:9 */
+        }
+
+        .iframe-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+ 
 </head>
 <body>
-
- <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF8zzHPQ-Q&#x2F;IwNR8-flKBfctEEJ5jtz5A&#x2F;view?embed" allowfullscreen="true" allow="fullscreen" frameborder="0" scrolling="no">  </iframe></div>
+ <div class="wrapper">
+  <div class="iframe-container">
+   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAF8zzHPQ-Q&#x2F;IwNR8-flKBfctEEJ5jtz5A&#x2F;view?embed" allowfullscreen="true" allow="fullscreen">  </iframe>
+  </div>
+ </div>
 
 </body>
  
