--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div class="info">
                 <i class="bi bi-facebook"></i>
                 <h4>Facebook</h4>
-                <p><a href="https://www.facebook.com/dimnimas">dimnimas</a></p>
+                <p><a href="https://www.facebook.com/dimnimas">Dimitris Nimas</a></p>
               </div>
               <br>
               <div class="info">
